force-app/main/default/objects/Case/fields/Case_Story_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Story_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is case story 2 for the test</description>
    <inlineHelpText>This is case story 2 for the test</inlineHelpText>
    <label>Case Story 2</label>
    <type>Checkbox</type>
</CustomField>