force-app/main/default/objects/Case/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the test case</description>
    <inlineHelpText>This is the test case</inlineHelpText>
    <label>Test Case</label>
    <type>Checkbox</type>
</CustomField>