force-app/main/default/objects/Case/fields/test_list__c.field-meta.xml
<CustomField>
    <fullName>test_list__c</fullName>
    <description>Test</description>
    <inlineHelpText>Test</inlineHelpText>
    <label>test list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>